# cyberdog_ros2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  NOTICE.md  README.md  README_EN.md
.github/: PULL_REQUEST_TEMPLATE.md
cyberdog_bridges/cyberdog_ception_bridge/: CMakeLists.txt  package.xml
cyberdog_bridges/cyberdog_ception_bridge/bcmgps_plugin/: CMakeLists.txt  package.xml  plugin.xml
cyberdog_bridges/cyberdog_ception_bridge/ception_bridge/: CMakeLists.txt
cyberdog_bridges/cyberdog_ception_bridge/params/: bcmgps_config.toml
cyberdog_bridges/device_bridge/: CMakeLists.txt  package.xml
cyberdog_bridges/device_bridge/parser/can/: example.toml
cyberdog_ception/ception_base/: CMakeLists.txt  package.xml
cyberdog_ception/cyberdog_bms/: CMakeLists.txt  package.xml
cyberdog_ception/cyberdog_bms/include/: time_interval.hpp
cyberdog_ception/cyberdog_bms/src/: bms_ctrl.cpp  bms_logger.cpp  bms_test.cpp
cyberdog_ception/cyberdog_body_state/: README.md  package.xml
cyberdog_ception/cyberdog_body_state/src/: body_state_server.cpp
cyberdog_ception/cyberdog_scenedetection/: CMakeLists.txt  package.xml
cyberdog_ception/cyberdog_scenedetection/bcm_gps/: CMakeLists.txt  README.md  package.xml
cyberdog_ception/cyberdog_scenedetection/bcm_gps/include/bcm_gps/: bcm_gps.hpp
cyberdog_ception/cyberdog_scenedetection/gps_base/: CMakeLists.txt  package.xml
cyberdog_ception/cyberdog_scenedetection/gps_base/include/gps_base/: gps_base.hpp
cyberdog_ception/cyberdog_scenedetection/gps_plugins/: CMakeLists.txt  package.xml  plugins.xml
cyberdog_ception/cyberdog_scenedetection/gps_plugins/include/gps_plugins/: gps_plugins.hpp
cyberdog_ception/cyberdog_scenedetection/gps_plugins/src/: gps_plugins.cpp
cyberdog_ception/cyberdog_scenedetection/scenedetection/: CMakeLists.txt  package.xml
cyberdog_ception/cyberdog_scenedetection/scenedetection/src/: scene_detection.cpp
cyberdog_common/behaviortreecppv3_vendor/: CMakeLists.txt
cyberdog_common/common_device/: CMakeLists.txt  README.md  package.xml
cyberdog_common/common_device/include/common_device/: can_device.hpp  common.hpp  common_device.hpp  device_base.hpp
cyberdog_common/common_device/include/common_parser/: can_parser.hpp
cyberdog_common/common_protocol/: CMakeLists.txt  README.md  README_EN.md  package.xml
cyberdog_common/common_protocol/include/common_parser/: can_parser.hpp  parser_base.hpp
cyberdog_common/common_protocol/include/common_protocol/: can_protocol.hpp  common.hpp  common_protocol.hpp  protocol_base.hpp
cyberdog_common/common_protocol/include/protocol/can/: can_utils.hpp  socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp  visibility_control.hpp
cyberdog_common/common_protocol/test/: CMakeLists.txt
cyberdog_common/common_protocol/test/common_protocol_test/: common_protocol_test.cpp
cyberdog_common/cyberdog_grpc/: CMakeLists.txt  README.md  common.cmake  package.xml
cyberdog_common/cyberdog_grpc/include/: cyberdog_app.hpp  cyberdog_app_client.hpp  cyberdog_app_server.hpp  msgdispatcher.hpp  net_avalible.hpp  threadsafe_queue.hpp
cyberdog_common/cyberdog_grpc/protos/: cyberdog_app.proto
cyberdog_common/cyberdog_grpc/src/: action_clients.cpp  cyberdog_app.cpp  cyberdog_app_client.cpp  cyberdog_app_server.cpp  main.cpp
cyberdog_common/cyberdog_utils/: CMakeLists.txt  package.xml
cyberdog_common/cyberdog_utils/include/cyberdog_utils/: Enums.hpp  action_server.hpp  lifecycle_node.hpp  parser.hpp  simple_action_server.hpp
cyberdog_common/cyberdog_utils/include/cyberdog_utils/can/: can_proto.h  can_utils.hpp  socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp  visibility_control.hpp
cyberdog_common/cyberdog_utils/include/cyberdog_utils/sensor/: sensor.h  sensor_base.h  sensor_utils.hpp
cyberdog_common/cyberdog_utils/src/: lifecycle_node.cpp
cyberdog_common/cyberdog_utils/src/can/: can_utils.cpp  socket_can_common.cpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_sender.cpp
cyberdog_common/cyberdog_utils/src/sensor/: sensor_utils.cpp
cyberdog_common/cyberdog_utils/test/: CMakeLists.txt  cyberdog_lifecycle_test.cpp
cyberdog_common/media_vendor/: CMakeLists.txt  README.md  media_vendor-extras.cmake  package.xml
cyberdog_common/media_vendor/cmake/Modules/: Findmpg123.cmake
cyberdog_common/opencv_vendor/: CMakeLists.txt  package.xml
cyberdog_common/sdl2main_vendor/: CMakeLists.txt  package.xml
cyberdog_common/sdl2mixer_vendor/: CMakeLists.txt  package.xml
cyberdog_common/toml11_vendor/: CMakeLists.txt  package.xml
cyberdog_decision/bt_engine/: CMakeLists.txt  package.xml
cyberdog_decision/bt_engine/include/cyberdog_bt_engine/: bt_action_node.hpp  bt_action_server.hpp  bt_conversions.hpp  bt_engine.hpp  bt_service_node.hpp  ros_topic_logger.hpp
cyberdog_decision/bt_engine/src/: bt_engine.cpp
cyberdog_decision/decision_utils/: CMakeLists.txt  package.xml
cyberdog_decision/decision_utils/include/decision_utils/: cascade_manager.hpp
cyberdog_decision/decision_utils/src/: cascade_manager.cpp
cyberdog_devices/bcmgps_plugin/: CMakeLists.txt  package.xml  plugin.xml
cyberdog_devices/cyberdog_gps/: CMakeLists.txt  package.xml
cyberdog_devices/cyberdog_gps/include/cyberdog_gps/: cyberdog_gps.hpp
cyberdog_devices/cyberdog_gps/src/: cyberdog_gps.cpp  gps_node.cpp
cyberdog_devices/cyberdog_lightsensor/: CMakeLists.txt  README.md
cyberdog_devices/cyberdog_livestream/: CMakeLists.txt  README.md
cyberdog_devices/cyberdog_livestream/include/video/: log.hpp
cyberdog_devices/cyberdog_obstacledetection/: CMakeLists.txt  package.xml
cyberdog_devices/cyberdog_obstacledetection/src/: obstacle_detection_server.cpp
cyberdog_devices/cyberdog_touch/: CMakeLists.txt
cyberdog_devices/cyberdog_touch/src/: InputEventReader.cpp
cyberdog_interaction/cyberdog_livestream/: package.xml
cyberdog_interaction/cyberdog_livestream/include/video/: video_stream.hpp
cyberdog_interaction/cyberdog_livestream/src/: video_stream.cpp
(+463 files in other folders)
