<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_bms</name>
  <version>1.0.0</version>
  <description>CyberDog battery management system</description>
  <maintainer email="duzhonghua@xiaomi.com">DuZhonghua</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ception_msgs</depend>
  <depend>lcm_vendor</depend>
  <depend>lcm_translate_msgs</depend>
  <depend>interaction_msgs</depend>
  <depend>rclcpp_action</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
