<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_grpc</name>
  <version>1.0.0</version>
  <description>GRPC ROS2 bridge</description>
  <maintainer email="duzhonghua@xiaomi.com">DuZhonghua</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cyberdog_interfaces</depend>
  <depend>ception_msgs</depend>
  <depend>motion_msgs</depend>
  <depend>interaction_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>automation_msgs</depend>
  <depend>cyberdog_utils</depend>
  <depend>cyberdog_voicecmd</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>grpc_vendor</depend>
  <depend>lcm_vendor</depend>
  <depend>lcm_translate_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
