<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>media_vendor</name>
  <version>1.0.0</version>
  <description>CMake files for audio modules</description>
  <maintainer email="xuhaiwang@xiaomi.com">Homalozoa</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdl2</depend>
  <depend>mpg123</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
